update for 2nd monitor support

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -7,7 +7,11 @@
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
+# uncomment the below line when I only have one monitor
+# monitor=,preferred,auto,auto
+monitor=DP-2,preferred,1920x0,1
+monitor=HDMI-A-1,preferred,0x0,1
+
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
@@ -61,11 +65,12 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 3
-    blur = yes
-    blur_size = 3
-    blur_passes = 1
-    blur_new_optimizations = on
-
+    blur {
+    	enabled = yes
+    	size = 3
+    	passes = 1
+    	new_optimizations = on
+    }
     # drop_shadow = yes
     # shadow_range = 4
     # shadow_render_power = 3
@@ -134,7 +139,7 @@ bind = $mainMod SHIFT, RETURN, exec, foot
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, P, exec, ulauncher
 bind = $mainMod SHIFT, B, exec, firefox
-bind = $mainMod SHIFT, F, exec, pcmanfm
+bind = $mainMod SHIFT, F, exec, dolphin
 bind = $mainMod SHIFT, S, exec, screenshot
 # bind = $mainMod, R, exec, wofi --show drun
 # bind = $mainMod, P, pseudo, # dwindle
@@ -178,9 +183,22 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
+# set workspace for second monitor
+workspace = 1, monitor:HDMI-A-1
+
 # window rules to start programs in specific workspaces
-windowrule=workspace 8 ,steam
-windowrule=workspace 9 silent,qBittorrent
+windowrule=workspace 1 silent,firefox
+windowrule=workspace 8 silent,steam
+windowrule=workspace 9 silent,qbittorrent
 windowrule=workspace 5 ,obs
 windowrule=workspace 5 ,kdenlive
-windowrule=workspace 10 ,veracrypt
+windowrule=workspace 10 silent,veracrypt
+
+exec-once=firefox
+exec-once=steam
+exec-once=qbittorrent
+#exec-once=veracrypt
+
+# cleanup script to deassign starting apps
+exec-once=cleanup_after_start.sh
+
