--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,2 +1,4 @@
 preload = ~/pix/wallpaper/berserk/berserk.jpg
+preload = ~/pix/wallpaper/halo/wallhaven-4v2ddp.jpg
 wallpaper = DP-2,~/pix/wallpaper/berserk/berserk.jpg
+wallpaper = HDMI-A-1,~/pix/wallpaper/halo/wallhaven-4v2ddp.jpg
