--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,5 +1,5 @@
 
-########################################################################################
+# # # # # # # # # # # # # # # # # # # # # # # # #
 
 #
 # Please note not all available settings / options are set here.
@@ -117,7 +117,8 @@ gestures {
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-device:epic-mouse-v1 {
+device {
+    name = epic-mouse-v1
     sensitivity = -0.5
 }
 
