--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,3 +1,5 @@
+splash=false
+
 preload = ~/pix/wallpaper/berserk/berserk.jpg
 preload = ~/pix/wallpaper/halo/wallhaven-4v2ddp.jpg
 wallpaper = DP-2,~/pix/wallpaper/berserk/berserk.jpg
