--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -70,8 +70,9 @@ font=jetBrains Mono:size=11
 # alternate-scroll-mode=yes
 
 [colors]
-alpha=1
-background=002b36
+alpha=0.9
+# background=002b36
+background=3d0010
 foreground=839496
 
 ## Normal/regular colors (color palette 0-7)
