updates to hyprland

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -107,7 +107,8 @@ dwindle {
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
+    # new_is_master = true
+    new_status = master
 }
 
 gestures {
@@ -138,7 +139,8 @@ bind = $mainMod SHIFT, C, killactive,
 bind = $mainMod SHIFT, Q, exit, 
 bind = $mainMod SHIFT, RETURN, exec, foot
 bind = $mainMod, V, togglefloating, 
-bind = $mainMod, P, exec, ulauncher
+# bind = $mainMod, P, exec, ulauncher
+bind = $mainMod, P, exec, pkill wofi || wofi
 bind = $mainMod SHIFT, B, exec, firefox
 bind = $mainMod SHIFT, F, exec, dolphin
 bind = $mainMod SHIFT, S, exec, screenshot
