updated with new wallpaper pick

--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,6 +1,10 @@
+# This config is auto generated
+
 splash=false
 
-preload = ~/pix/wallpaper/berserk/berserk.jpg
-preload = ~/pix/wallpaper/halo/wallhaven-4v2ddp.jpg
-wallpaper = DP-2,~/pix/wallpaper/berserk/berserk.jpg
-wallpaper = HDMI-A-1,~/pix/wallpaper/halo/wallhaven-4v2ddp.jpg
+preload = /home/bloopers/pix/wallpaper/watch_dogs/wallhaven-yjvppx.jpg
+preload = /home/bloopers/pix/wallpaper/bioshock/wallhaven-zxeg9j.png
+
+wallpaper = DP-2,/home/bloopers/pix/wallpaper/watch_dogs/wallhaven-yjvppx.jpg
+wallpaper = HDMI-A-1,/home/bloopers/pix/wallpaper/bioshock/wallhaven-zxeg9j.png
+
