--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -26,6 +26,7 @@ monitor=HDMI-A-1,preferred,0x0,1
 env = XCURSOR_SIZE,24
 
 # execute once
+exec-once = generate_hyprpaper_config.sh
 exec-once = waybar & hyprpaper & dunst
 exec-once = foot --server
 # exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
