--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -189,19 +189,21 @@ bindm = $mainMod, mouse:273, resizewindow
 
 # set workspace for second monitor
 workspace = 1, monitor:HDMI-A-1
+# workspace = 2, monitor:DP-2
+# workspace = 9, monitor:DP-2
 
 # window rules to start programs in specific workspaces
-windowrule=workspace 1 silent,firefox
-windowrule=workspace 8 silent,steam
-windowrule=workspace 9 silent,qbittorrent
-windowrule=workspace 5 ,obs
-windowrule=workspace 5 ,kdenlive
-windowrule=workspace 10 silent,veracrypt
+windowrulev2=workspace 2,         class:firefox
+windowrulev2=workspace 8 silent, class:steam
+windowrulev2=workspace 9 silent, class:org.qbittorrent.qBittorrent
+windowrulev2=workspace 5, class:com.obsproject.Studio
+windowrulev2=workspace 5, class:org.kde.kdenlive
+windowrulev2=workspace 10, class:veracrypt
 
 exec-once=firefox
 exec-once=steam
 exec-once=qbittorrent
-#exec-once=veracrypt
+# exec-once=veracrypt
 
 # cleanup script to deassign starting apps
 exec-once=cleanup_after_start.sh
