--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -138,6 +138,7 @@ $mainMod = SUPER
 # bind = $mainMod, Q, exec, kitty
 bind = $mainMod SHIFT, C, killactive, 
 bind = $mainMod SHIFT, Q, exit, 
+bind = $mainMod SHIFT, L, exec, hyprlock 
 bind = $mainMod SHIFT, RETURN, exec, foot
 bind = $mainMod, V, togglefloating, 
 # bind = $mainMod, P, exec, ulauncher
@@ -202,7 +203,7 @@ windowrulev2=workspace 10, class:veracrypt
 
 exec-once=firefox
 exec-once=steam
-exec-once=qbittorrent
+# exec-once=qbittorrent
 # exec-once=veracrypt
 
 # cleanup script to deassign starting apps
