update syntax for gestures

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -112,10 +112,11 @@ master {
     new_status = master
 }
 
-gestures {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = off
-}
+# new syntax for gestures. I don't have a trackpad so commenting out for now
+# gestures {
+# gesture = 3, horizontal, workspace
+# }
+
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
