add scripts so its all in one place

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -208,5 +208,5 @@ exec-once=steam
 # exec-once=veracrypt
 
 # cleanup script to deassign starting apps
-exec-once=cleanup_after_start.sh
+exec-once = cleanup_after_start.sh
 
